sw/source/core/layout/calcmove.cxx
@@ -949,7 +949,7 @@ void SwLayoutFrame::MakeAll(vcl::RenderContext* /*pRenderContext*/)
     const SwLayNotify aNotify( this );
     bool bVert = IsVertical();
 
-    SwRectFn fnRect = bVert ? ( IsVertLR() ? (IsVertLRBT() ? fnRectVertL2RB2T : fnRectVertL2R) : fnRectVert ) : fnRectHori;
+    SwRectFn fnRect = ( IsNeighbourFrame() == bVert )? fnRectHori : ( IsVertLR() ? (IsVertLRBT() ? fnRectVertL2RB2T : fnRectVertL2R) : fnRectVert );
 
     std::optional<SwBorderAttrAccess> oAccess;
     const SwBorderAttrs*pAttrs = nullptr;
@@ -975,36 +975,33 @@ void SwLayoutFrame::MakeAll(vcl::RenderContext* /*pRenderContext*/)
                 {
                     // Set FixSize; VarSize is set by Format() after calculating the PrtArea
                     setFramePrintAreaValid(false);
-                    SwFrameAreaDefinition::FrameAreaWriteAccess aFrm(*this);
 
-                    if (IsNeighbourFrame() && !bVert)
+                    SwTwips nPrtWidth = (GetUpper()->getFramePrintArea().*fnRect->fnGetWidth)();
+                    if( bVert && ( IsBodyFrame() || IsFootnoteContFrame() ) )
                     {
-                        SwTwips nPrtHeight = (GetUpper()->getFramePrintArea().*fnRect->fnGetHeight)();
-                        const tools::Long nDiff = nPrtHeight - (getFrameArea().*fnRect->fnGetHeight)();
-                        (aFrm.*fnRect->fnAddBottom)( nDiff );
+                        SwFrame* pNxt = GetPrev();
+                        while( pNxt && !pNxt->IsHeaderFrame() )
+                            pNxt = pNxt->GetPrev();
+                        if( pNxt )
+                            nPrtWidth -= pNxt->getFrameArea().Height();
+                        pNxt = GetNext();
+                        while( pNxt && !pNxt->IsFooterFrame() )
+                            pNxt = pNxt->GetNext();
+                        if( pNxt )
+                            nPrtWidth -= pNxt->getFrameArea().Height();
+                    }
+
+                    const tools::Long nDiff = nPrtWidth - (getFrameArea().*fnRect->fnGetWidth)();
+                    SwFrameAreaDefinition::FrameAreaWriteAccess aFrm(*this);
+                    // SwRectFn switched between horizontal and vertical when bVert == IsNeighbourFrame().
+                    // We pick fnSubLeft or fnAddRight that is correspondant to SwRectFn->fnAddBottom
+                    if( ( IsCellFrame() && IsRightToLeft() ) || ( IsColumnFrame() && bVert && !IsVertLR() ) )
+                    {
+                        (aFrm.*fnRect->fnSubLeft)( nDiff );
                     }
                     else
                     {
-                        SwTwips nPrtWidth = (GetUpper()->getFramePrintArea().*fnRect->fnGetWidth)();
-                        if( bVert && ( IsBodyFrame() || IsFootnoteContFrame() ) )
-                        {
-                            SwFrame* pNxt = GetPrev();
-                            while( pNxt && !pNxt->IsHeaderFrame() )
-                                pNxt = pNxt->GetPrev();
-                            if( pNxt )
-                                nPrtWidth -= pNxt->getFrameArea().Height();
-                            pNxt = GetNext();
-                            while( pNxt && !pNxt->IsFooterFrame() )
-                                pNxt = pNxt->GetNext();
-                            if( pNxt )
-                                nPrtWidth -= pNxt->getFrameArea().Height();
-                        }
-
-                        const tools::Long nDiff = nPrtWidth - (getFrameArea().*fnRect->fnGetWidth)();
-                        if(IsRightToLeft() )
-                            (aFrm.*fnRect->fnSubLeft)( nDiff );
-                        else
-                            (aFrm.*fnRect->fnAddRight)( nDiff );
+                        (aFrm.*fnRect->fnAddRight)( nDiff );
                     }
                 }
                 else
